notes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: notes-ingress
  namespace: notes
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/configuration-snippet: |
      add_header Content-Security-Policy "default-src 'self'; script-src 'self' 'unsafe-inline' https://umami.publio.online;";
      add_header Set-Cookie "umami-tracking=1; Path=/; Secure; HttpOnly";
spec:
  ingressClassName: public
  rules:
  - host: notes.publio.online
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: siyuan
            port:
              number: 6806
  tls:
  - hosts:
    - notes.publio.online
    secretName: notes-tls
